--- a/src/main/resources/com/example/discordfx/StyleSheet/FileDownloader.css
+++ b/src/main/resources/com/example/discordfx/StyleSheet/FileDownloader.css
@@ -1,40 +1,62 @@
-#root
+#background
 {
     -fx-background-color: #999999;
 }
 
-
-#anchorPane
+#pane
 {
     -fx-background-color: #8a2be2;
-    -fx-background-radius: 20;
+    -fx-background-radius: 30;
 }
-
 
 .button
 {
-
+    -fx-background-color: 
+        #090a0c,
+        linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
+        linear-gradient(#20262b, #191d22),
+        radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
     -fx-background-radius: 20;
-    -fx-font-size: 20;
+    -fx-background-insets: 0,1,2,0;
+    -fx-text-fill: white;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
     -fx-font-weight: bold;
-    -fx-text-fill: #000000;
-    -fx-background-color: #ffffff;
-    -fx-border-color: #b3b3b3;
-    -fx-border-width: 3;
-    -fx-border-radius: 20;
-    -fx-border-style: outset;
+    -fx-font-size: 17px;
 }
 
 
-#download
+#icon
 {
-    -fx-graphic: url(Icon/download.png);
-    -fx-max-height: 25px;
+    -fx-image: url(Icon/download.png);
+}
+
+#iconContainer
+{
+    -fx-background-color: #999999;
+    -fx-background-radius: 360;
+    -fx-padding: 20;
+    -fx-border-width: 0;
+}
+
+#downloadButtonIcon
+{
+    -fx-border-width: 2px;
+    -fx-border-color: white;
+    -fx-background-color: white;
+
+    -fx-image: url(Icon/downloadBigIcon.png);
 }
 
 
-#circle
+#downloadButtonIconContainer
 {
     -fx-background-color: #ffffff;
     -fx-background-radius: 360;
+    -fx-padding: 10;
+    -fx-border-width: 0;
+}
+
+#donwloadButton
+{
+    -fx-padding: -10;
 }
