--- a/src/main/resources/com/example/discordfx/AddServerMember.fxml
+++ b/src/main/resources/com/example/discordfx/AddServerMember.fxml
@@ -75,7 +75,7 @@
             </Label>
             <Label layoutX="372.0" layoutY="176.0">
                <graphic>
-                  <Text fx:id="resultText" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="395.3367919921875">
+                  <Text fx:id="resultText_2" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="395.3367919921875">
                      <font>
                         <Font size="22.0" />
                      </font>
@@ -96,7 +96,7 @@
             </Label>
             <Label layoutX="372.0" layoutY="122.0">
                <graphic>
-                  <Text fx:id="resultText2" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="396.3367919921875">
+                  <Text fx:id="resultText" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="396.3367919921875">
                      <font>
                         <Font size="22.0" />
                      </font>
@@ -104,6 +104,14 @@
                </graphic>
             </Label>
             <ImageView fx:id="backIcon" fitHeight="150.0" fitWidth="200.0" layoutX="325.0" layoutY="-50.0" pickOnBounds="true" preserveRatio="true" />
+            <Button layoutX="678.0" layoutY="533.0" mnemonicParsing="false" onAction="#backToServer" prefHeight="29.0" prefWidth="106.0" text="Back">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </Pane>
    </children>
