--- a/src/main/resources/com/example/discordfx/ChangeServerName.fxml
+++ b/src/main/resources/com/example/discordfx/ChangeServerName.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import java.net.URL?>
 
 <AnchorPane fx:id="background" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.ChangeServerName">
    <stylesheets>
@@ -18,7 +18,7 @@
    <children>
       <Pane fx:id="pane" layoutX="109.0" layoutY="130.0" prefHeight="494.0" prefWidth="682.0">
          <children>
-            <TextField fx:id="newName" alignment="CENTER" layoutX="192.0" layoutY="239.0" prefHeight="35.0" prefWidth="375.0" promptText="New name">
+            <TextField fx:id="newName" alignment="CENTER" layoutX="164.0" layoutY="239.0" prefHeight="35.0" prefWidth="375.0" promptText="New name">
                <font>
                   <Font size="16.0" />
                </font>
@@ -26,12 +26,12 @@
                   <Cursor fx:constant="TEXT" />
                </cursor>
             </TextField>
-            <Text fx:id="result" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="465.1392517089844">
+            <Text fx:id="result" layoutX="119.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="465.1392517089844">
                <font>
                   <Font size="21.0" />
                </font>
             </Text>
-            <Button layoutX="299.0" layoutY="307.0" mnemonicParsing="false" onAction="#changeName" prefHeight="38.0" prefWidth="160.0" text="change">
+            <Button layoutX="272.0" layoutY="306.0" mnemonicParsing="false" onAction="#changeName" prefHeight="38.0" prefWidth="160.0" text="change">
                <font>
                   <Font size="15.0" />
                </font>
