--- a/src/main/resources/com/example/discordfx/Dashboard.fxml
+++ b/src/main/resources/com/example/discordfx/Dashboard.fxml
@@ -1,91 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.*?>
+<?import java.net.URL?>
 
-<AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.Dashboard">
+<?import javafx.scene.image.Image?>
+<AnchorPane fx:id="background" focusTraversable="true" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.Dashboard">
+   <stylesheets>
+      <URL value="@StyleSheet/Dashboard.css" />
+   </stylesheets>
    <children>
-      <Button layoutX="381.0" layoutY="38.0" mnemonicParsing="false" onAction="#profile" prefHeight="37.0" prefWidth="162.0" text="Profile" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="381.0" layoutY="103.0" mnemonicParsing="false" onAction="#downloadFile" prefHeight="38.0" prefWidth="162.0" text="Download file" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="381.0" layoutY="167.0" mnemonicParsing="false" onAction="#setStatus" prefHeight="37.0" prefWidth="162.0" text="Set status" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="381.0" layoutY="234.0" mnemonicParsing="false" onAction="#relationship" prefHeight="37.0" prefWidth="162.0" text="Relationship" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="381.0" layoutY="305.0" mnemonicParsing="false" onAction="#friendshipManagement" prefHeight="37.0" prefWidth="162.0" text="Friendship" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="380.0" layoutY="648.0" mnemonicParsing="false" onAction="#logOut" prefHeight="37.0" prefWidth="162.0" text="Log out" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="381.0" layoutY="373.0" mnemonicParsing="false" onAction="#notification" prefHeight="37.0" prefWidth="162.0" text="Notifications" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="373.0" layoutY="434.0" mnemonicParsing="false" onAction="#connectToPrivateChat" prefHeight="38.0" prefWidth="175.0" text="Connect private chat" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="379.0" layoutY="502.0" mnemonicParsing="false" onAction="#showServers" prefHeight="38.0" prefWidth="162.0" text="Server chats" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="48.0" layoutY="166.0" mnemonicParsing="false" onAction="#makePrivateChat" prefHeight="38.0" prefWidth="162.0" text="Server chats" textAlignment="CENTER">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
+      <Pane fx:id="pane" layoutX="84.0" layoutY="91.0" prefHeight="542.0" prefWidth="732.0">
+         <children>
+            <Button fx:id="logout" layoutX="293.0" layoutY="473.0" mnemonicParsing="false" onAction="#logOut" prefHeight="40.0" prefWidth="180.0" text="Log out" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="98.0" layoutY="152.0" mnemonicParsing="false" onAction="#showServers" prefHeight="40.0" prefWidth="250.0" text="Server chats" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="98.0" layoutY="227.0" mnemonicParsing="false" onAction="#connectToPrivateChat" prefHeight="40.0" prefWidth="250.0" text="Connect private chat" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="98.0" layoutY="301.0" mnemonicParsing="false" onAction="#notification" prefHeight="40.0" prefWidth="250.0" text="Notifications" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="98.0" layoutY="375.0" mnemonicParsing="false" onAction="#friendshipManagement" prefHeight="40.0" prefWidth="250.0" text="Friendship" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="418.0" layoutY="152.0" mnemonicParsing="false" onAction="#relationship" prefHeight="40.0" prefWidth="250.0" text="Relationship" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="418.0" layoutY="227.0" mnemonicParsing="false" onAction="#setStatus" prefHeight="40.0" prefWidth="250.0" text="Set status" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="418.0" layoutY="301.0" mnemonicParsing="false" onAction="#downloadFile" prefHeight="40.0" prefWidth="250.0" text="Download file" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="418.0" layoutY="375.0" mnemonicParsing="false" onAction="#profile" prefHeight="40.0" prefWidth="250.0" text="Profile" textAlignment="CENTER">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Label fx:id="iconContainer" layoutX="281.0" layoutY="-88.0">
+               <graphic>
+                  <ImageView fitHeight="174.0" fitWidth="203.0" pickOnBounds="true" preserveRatio="true" >
+                     <Image url="@Icon/discord-logo.png"/>
+                  </ImageView>
+               </graphic>
+            </Label>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
