--- a/src/main/resources/com/example/discordfx/FileDownloader.fxml
+++ b/src/main/resources/com/example/discordfx/FileDownloader.fxml
@@ -1,56 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import java.net.URL?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import java.net.URL?>
 
-<AnchorPane fx:id="root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.FileDownloader">
+<AnchorPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.FileDownloader">
    <stylesheets>
       <URL value="@StyleSheet/FileDownloader.css" />
    </stylesheets>
    <children>
-      <AnchorPane fx:id="anchorPane" layoutX="148.0" layoutY="144.0" prefHeight="492.0" prefWidth="666.0">
+      <Pane fx:id="pane" layoutX="106.0" layoutY="117.0" prefHeight="467.0" prefWidth="688.0">
          <children>
-            <Button layoutX="553.0" layoutY="419.0" mnemonicParsing="false" onAction="#back" prefHeight="50.0" prefWidth="92.0" text="Back">
+            <Text fx:id="text" layoutX="146.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="395.3367919921875">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Text>
+            <Button graphicTextGap="75.0" layoutX="221.0" layoutY="287.0" mnemonicParsing="false" onAction="#download" prefHeight="68.0" prefWidth="246.0" text="Download">
+               <graphic>
+                  <Label fx:id="downloadButtonIconContainer" prefHeight="55.0" prefWidth="49.0">
+                     <graphic>
+                        <ImageView fx:id="downloadButtonIcon" fitHeight="36.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Label>
+               </graphic>
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <TextField fx:id="fileName" alignment="CENTER" layoutX="124.0" layoutY="180.0" prefHeight="40.0" prefWidth="434.0" promptText="Name of file">
+               </cursor></Button>
+            <TextField fx:id="fileName" layoutX="159.0" layoutY="215.0" prefHeight="36.0" prefWidth="373.0">
                <font>
-                  <Font size="18.0" />
+                  <Font size="16.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="TEXT" />
-               </cursor>
-            </TextField>
-            <Button fx:id="download" layoutX="229.0" layoutY="246.0" maxHeight="50.0" mnemonicParsing="false" onAction="#download" prefHeight="50.0" prefWidth="224.0" text="Download">
-               <font>
-                  <Font size="14.0" />
-               </font>
+               </cursor></TextField>
+            <ImageView fx:id="icon" fitHeight="150.0" fitWidth="200.0" layoutX="270.0" layoutY="-67.0" pickOnBounds="true" preserveRatio="true" />
+            <Button layoutX="534.0" layoutY="398.0" mnemonicParsing="false" onAction="#back" prefHeight="38.0" prefWidth="109.0" text="Back">
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Text fx:id="text" layoutX="71.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="523.7366638183594">
-               <font>
-                  <Font size="21.0" />
-               </font>
-            </Text>
-         </children>
-      </AnchorPane>
-      <Pane fx:id="circle" layoutX="394.0" layoutY="21.0" prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <ImageView fitHeight="142.0" fitWidth="142.0" layoutX="29.0" layoutY="29.0">
-               <Image url="@Icon/downloadBigIcon.png" />
-            </ImageView>
+               </cursor></Button>
          </children>
       </Pane>
    </children>
