--- a/src/main/resources/com/example/discordfx/MakeRole.fxml
+++ b/src/main/resources/com/example/discordfx/MakeRole.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.*?>
+<?import java.net.URL?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.*?>
-<?import java.net.URL?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="background" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.MakeRole">
    <stylesheets>
@@ -20,12 +24,12 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <TextField fx:id="roleName" alignment="CENTER" layoutX="169.0" layoutY="145.0" prefHeight="37.0" prefWidth="369.0" promptText="Name">
+            <TextField fx:id="roleName" alignment="CENTER" layoutX="169.0" layoutY="159.0" prefHeight="37.0" prefWidth="369.0" promptText="Name">
                <font>
                   <Font size="17.0" />
                </font>
             </TextField>
-            <Pane fx:id="pane2" layoutX="135.0" layoutY="209.0" prefHeight="200.0" prefWidth="438.0">
+            <Pane fx:id="pane2" layoutX="135.0" layoutY="217.0" prefHeight="200.0" prefWidth="438.0">
                <children>
                   <RadioButton fx:id="pinMessages" layoutX="229.0" layoutY="87.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="195.0" text="Pin messages">
                      <font>
@@ -90,12 +94,12 @@
                   <ImageView fx:id="icon" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </graphic>
             </Label>
+            <Text fx:id="result" layoutX="126.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="455.53924560546875">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
-      <Text fx:id="result" layoutX="232.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="455.53924560546875">
-         <font>
-            <Font size="21.0" />
-         </font>
-      </Text>
    </children>
 </AnchorPane>
