--- a/src/main/resources/com/example/discordfx/ConnectToPrivateChat.fxml
+++ b/src/main/resources/com/example/discordfx/ConnectToPrivateChat.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import java.net.URL?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.*?>
-<?import java.net.URL?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="background" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.ConnectToPrivateChat">
    <stylesheets>
@@ -67,6 +69,14 @@
                   </Text>
                </graphic>
             </Label>
+            <Button layoutX="692.0" layoutY="526.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="31.0" prefWidth="74.0" text="Back">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </Pane>
    </children>
