--- a/src/main/resources/com/example/discordfx/DiscordServer.fxml
+++ b/src/main/resources/com/example/discordfx/DiscordServer.fxml
@@ -1,113 +1,168 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.*?>
+<?import java.net.URL?>
 
-
-<AnchorPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.DiscordServer">
+<AnchorPane fx:id="background" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.discordfx.DiscordServer">
+   <stylesheets>
+      <URL value="@StyleSheet/DiscordServer.css" />
+   </stylesheets>
    <children>
-      <ImageView fx:id="serverImageProfile" fitHeight="156.0" fitWidth="214.0" layoutX="14.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
-      <Text fx:id="name" layoutX="14.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="341.6945114135742">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Text>
-      <Text fx:id="result" layoutX="279.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="341.6945114135742">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Text>
-      <Button layoutX="687.0" layoutY="81.0" mnemonicParsing="false" onAction="#addMember" prefHeight="40.0" prefWidth="166.0" text="Add member" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="687.0" layoutY="147.0" mnemonicParsing="false" onAction="#changeName" prefHeight="40.0" prefWidth="166.0" text="Change name" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="687.0" layoutY="217.0" mnemonicParsing="false" onAction="#channels" prefHeight="40.0" prefWidth="166.0" text="Channels" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="686.0" layoutY="291.0" mnemonicParsing="false" onAction="#deleteServer" prefHeight="40.0" prefWidth="166.0" text="Delete server" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="687.0" layoutY="362.0" mnemonicParsing="false" onAction="#makeChannel" prefHeight="40.0" prefWidth="166.0" text="Make channel" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="687.0" layoutY="425.0" mnemonicParsing="false" onAction="#makeRole" prefHeight="40.0" prefWidth="166.0" text="Make role" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="450.0" layoutY="636.0" mnemonicParsing="false" onAction="#resumeMusic" prefHeight="40.0" prefWidth="166.0" text="Button" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="264.0" layoutY="636.0" mnemonicParsing="false" onAction="#stopMusic" prefHeight="40.0" prefWidth="166.0" text="Button" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="686.0" layoutY="497.0" mnemonicParsing="false" onAction="#sendMusicOnServer" prefHeight="40.0" prefWidth="166.0" text="Play music" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="482.0" layoutY="81.0" mnemonicParsing="false" onAction="#showMembers" prefHeight="40.0" prefWidth="166.0" text="Members" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Button layoutX="778.0" layoutY="649.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="27.0" prefWidth="108.0" text="Back" textAlignment="CENTER">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
+      <Pane fx:id="pane" layoutX="74.0" layoutY="99.0" prefHeight="551.0" prefWidth="753.0">
+         <children>
+            <Text fx:id="name" layoutX="215.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="349.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
+            <Button graphicTextGap="25.0" layoutX="116.0" layoutY="218.0" mnemonicParsing="false" onAction="#addMember" prefHeight="40.0" prefWidth="225.0" text="Add member" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <ImageView fx:id="addMemberIcon" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" />
+               </graphic>
+            </Button>
+            <Button graphicTextGap="25.0" layoutX="452.0" layoutY="278.0" mnemonicParsing="false" onAction="#changeName" prefHeight="40.0" prefWidth="225.0" text="Change name" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <Label>
+                     <graphic>
+                        <ImageView fx:id="changeNameIcon" fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Label>
+               </graphic>
+            </Button>
+            <Button graphicTextGap="55.0" layoutX="116.0" layoutY="345.0" mnemonicParsing="false" onAction="#channels" prefHeight="40.0" prefWidth="225.0" text="Channels" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <ImageView fx:id="channelsIcon" fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" />
+               </graphic>
+            </Button>
+            <Button fx:id="deleteServer" layoutX="290.0" layoutY="481.0" mnemonicParsing="false" onAction="#deleteServer" prefHeight="44.0" prefWidth="198.0" text="Delete server" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button graphicTextGap="25.0" layoutX="452.0" layoutY="345.0" mnemonicParsing="false" onAction="#makeChannel" prefHeight="40.0" prefWidth="225.0" text="Make channel" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <Label>
+                     <graphic>
+                        <ImageView fx:id="makeChannelIcon" fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Label>
+               </graphic>
+            </Button>
+            <Button graphicTextGap="55.0" layoutX="452.0" layoutY="218.0" mnemonicParsing="false" onAction="#makeRole" prefHeight="40.0" prefWidth="225.0" text="Make role" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <Label>
+                     <graphic>
+                        <ImageView fx:id="makeRoleIcon" fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Label>
+               </graphic>
+            </Button>
+            <Button fx:id="resumeButton" graphicTextGap="20.0" layoutX="553.0" layoutY="419.0" mnemonicParsing="false" onAction="#resumeMusic" prefHeight="40.0" prefWidth="166.0" text="Resume" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <Label>
+                     <graphic>
+                        <ImageView fx:id="resumeIcon" fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Label>
+               </graphic>
+            </Button>
+            <Button fx:id="stopButton" graphicTextGap="40.0" layoutX="57.0" layoutY="419.0" mnemonicParsing="false" onAction="#stopMusic" prefHeight="40.0" prefWidth="166.0" text="Stop" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <Label>
+                     <graphic>
+                        <ImageView fx:id="stopIcon" fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Label>
+               </graphic>
+            </Button>
+            <Button layoutX="306.0" layoutY="419.0" mnemonicParsing="false" onAction="#sendMusicOnServer" prefHeight="40.0" prefWidth="166.0" text="Play music" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button graphicTextGap="55.0" layoutX="116.0" layoutY="278.0" mnemonicParsing="false" onAction="#showMembers" prefHeight="40.0" prefWidth="225.0" text="Members" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <graphic>
+                  <ImageView fx:id="membersIcon" fitHeight="58.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true" />
+               </graphic>
+            </Button>
+            <Button layoutX="597.0" layoutY="483.0" mnemonicParsing="false" onAction="#backToMenu" prefHeight="40.0" prefWidth="108.0" text="Back" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Text fx:id="result" layoutX="129.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="sdfdsfdsfds" textAlignment="CENTER" wrappingWidth="521.6945114135742">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
+            <Label fx:id="iconContainer" layoutX="300.0" layoutY="-83.0">
+               <graphic>
+                  <ImageView fx:id="serverImageProfile" fitHeight="137.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
+               </graphic>
+            </Label>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
